fix Dayview title getting pushed around on small screens

--- a/front/src/Dayview.css
+++ b/front/src/Dayview.css
@@ -7,12 +7,11 @@
 */
 
 .dayviewContainer h1 {
-  margin:2vh;
-  width:200px;
+  margin:2vmin;
 }
 
 .dayviewContainer h2 {
-  margin:2vh;
+  margin:2vmin;
 }
 
 .dayviewContainer {
@@ -28,6 +27,24 @@
 @media only screen and (max-width: 600px) {
   .dayviewContainer {
     padding:2vmin 2vmin 2vmin 2vmin;
+  }
+}
+
+.dayviewContainer .dateHeader {
+  flex-wrap:nowrap;
+}
+
+.dayviewContainer .dateHeader .titleContainer {
+  display:flex;
+  align-items:center;
+  text-align: start;
+  justify-content: space-around;
+  flex-wrap:wrap;
+}
+
+@media only screen and (min-width: 600px) {
+  .dayviewContainer .dateHeader .titleContainer {
+    width: 50vmin;
   }
 }
 
@@ -129,6 +146,9 @@
 }
 
 .dayviewContainer .arrow-right {
+  padding:0;
+  margin:0;
+  margin-left:5px;
   width: 0; 
   height: 0; 
   border-top: 20px solid transparent;
@@ -141,6 +161,9 @@
 }
 
 .dayviewContainer .arrow-left {
+  padding:0;
+  margin:0;
+  margin-right:5px;
   width: 0; 
   height: 0; 
   border-top: 20px solid transparent;
